--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,5 +1,5 @@
 .nav-link {
-    color: #333;  /* Couleur de texte par défaut */
+
     text-decoration: none; /* Retirer la sous-ligne */
     padding: 10px 15px;
     transition: color 0.3s ease; /* Transition douce */
@@ -7,5 +7,8 @@
   
   /* Effet hover */
   .nav-link:hover {
-    color: red; /* Changer la couleur du texte en rouge au survol */
+    color: rgb(85, 80, 80); /* Changer la couleur du texte en rouge au survol */
+  }
+  .icons{
+    size: 50px;
   }
