--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,11 +2,11 @@
     <div class="flex m-4 justify-between align-center">
                
         <div class="flex  gap-2">
-                <a href="https://github.com/hajar-tech/myPortfolio">
+                <a class="icons" href="https://github.com/hajar-tech/myPortfolio">
                     <i class='bx bxl-github' ></i>
                 </a>
                 
-                <a href="https://www.linkedin.com/in/hajar-zerhouni-730575349/">
+                <a class="icons" href="https://www.linkedin.com/in/hajar-zerhouni-730575349/">
                     <i class='bx bxl-linkedin-square' ></i>
                 </a>
         </div>
@@ -26,7 +26,7 @@
 
     </div>
     <nav>
-        <ul class="nav-list flex justify-center gap-10  mt-6">
+        <ul class="nav-list flex justify-center gap-10  mt-6 bg-black text-white p-3 rounded-lg">
             <li class="nav-link"><a routerLink="/">Home</a></li>
             <li class="nav-link"><a routerLink="/about">About</a></li>
             <li class="nav-link"><a routerLink="/projects">Projects</a></li>
