create contact component

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -29,6 +29,7 @@
         <ul class="nav-list flex justify-center gap-10  mt-6 bg-black text-white p-3 rounded-lg">
             <li class="nav-link"><a routerLink="/">Home</a></li>
             <li class="nav-link"><a routerLink="/about">About</a></li>
+            <li class="nav-link"><a routerLink="/skils">Skils</a></li>
             <li class="nav-link"><a routerLink="/projects">Projects</a></li>
             <li class="nav-link"><a routerLink="/contact">Contact</a></li>
         </ul>
