--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,15 +1,15 @@
-<p>contact works!</p>
+
 <!-- This form uses the fabform.io form backend service -->
 
-<div class="relative flex items-top justify-center min-h-screen bg-white dark:bg-gray-900 sm:items-center sm:pt-0">
+<div class="relative shadow-md shadow-red-950 flex items-top justify-center min-h-screen sm:items-center sm:pt-0">
     <div class="max-w-6xl mx-auto sm:px-6 lg:px-8">
         <div class="mt-8 overflow-hidden">
-            <div class="grid grid-cols-1 md:grid-cols-2">
-                <div class="p-6 mr-2 bg-gray-100 dark:bg-gray-800 sm:rounded-lg">
-                    <h1 class="text-4xl sm:text-5xl text-gray-800 dark:text-white font-extrabold tracking-tight">
+            <div class="grid grid-cols-1 md:grid-cols-2 bg-stone-900 rounded-lg shadow-lg">
+                <div class="p-6 mr-2  sm:rounded-lg">
+                    <h1 class="text-xl sm:text-3xl  text-neutral-400 font-bold tracking-tight">
                         Get in touch
                     </h1>
-                    <p class="text-normal text-lg sm:text-2xl font-medium text-gray-600 dark:text-gray-400 mt-2">
+                    <p class="text-normal text-lg sm:text-2xl font-medium text-zinc-400  mt-2">
                         Fill in the form to start a conversation
                     </p>
 
@@ -17,21 +17,21 @@
                         <!-- Address information here -->
                     </div>
 
-                    <div class="flex items-center mt-4 text-gray-600 dark:text-gray-400">
-                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" class="w-8 h-8 text-gray-500">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
+                    <div class="flex items-center mt-4 text-zinc-300">
+                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" class="w-8 h-8 text-zinc-300">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="0.7" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
                         </svg>
                         <div class="ml-4 text-md tracking-wide font-semibold w-40">
-                            +44 1234567890
+                            +212 644316928
                         </div>
                     </div>
 
-                    <div class="flex items-center mt-2 text-gray-600 dark:text-gray-400">
-                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" class="w-8 h-8 text-gray-500">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
+                    <div class="flex items-center mt-2 text-zinc-300">
+                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" class="w-8 h-8 text-zinc-300">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="0.7" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
                         </svg>
                         <div class="ml-4 text-md tracking-wide font-semibold w-40">
-                            <a href="https://veilmail.io/irish-geoff">https://veilmail.io/irish-geoff</a>
+                            <a href="https://veilmail.io/irish-geoff">hajar.zerhounipr&#64;gmail.com</a>
                         </div>
                     </div>
                 </div>
@@ -39,25 +39,23 @@
                 <form action="https://fabform.io/f/xxxxx" method="post" class="p-6 flex flex-col justify-center">
                     <div class="flex flex-col">
                         <label for="name" class="hidden">Full Name</label>
-                        <input type="name" name="name" id="name" placeholder="Full Name" class="w-100 mt-2 py-3 px-3 rounded-lg bg-white dark:bg-gray-800 border border-gray-400 dark:border-gray-700 text-gray-800 font-semibold focus:border-indigo-500 focus:outline-none">
+                        <input type="name" name="name" id="name" placeholder="Full Name" class="w-100 mt-2 py-3 px-3 rounded-lg bg-transparent  border border-gray-400 dark:border-gray-700 text-neutral-300 font-semibold focus:border-red-900 focus:outline-none">
                     </div>
 
                     <div class="flex flex-col mt-2">
                         <label for="email" class="hidden">Email</label>
-                        <input type="email" name="email" id="email" placeholder="Email" class="w-100 mt-2 py-3 px-3 rounded-lg bg-white dark:bg-gray-800 border border-gray-400 dark:border-gray-700 text-gray-800 font-semibold focus:border-indigo-500 focus:outline-none">
+                        <input type="email" name="email" id="email" placeholder="Email" class="w-100 mt-2 py-3 px-3 rounded-lg bg-transparent border border-gray-400 dark:border-gray-700 text-neutral-300 font-semibold focus:border-red-900 focus:outline-none">
                     </div>
 
                     <div class="flex flex-col mt-2">
                         <label for="message" class="hidden">Message</label>
-                        <textarea name="message" id="message" placeholder="Your Message" class="w-100 mt-2 py-3 px-3 rounded-lg bg-white dark:bg-gray-800 border border-gray-400 dark:border-gray-700 text-gray-800 font-semibold focus:border-indigo-500 focus:outline-none"></textarea>
+                        <textarea name="message" id="message" placeholder="Your Message" class="w-100 mt-2 py-3 px-3 rounded-lg bg-transparent border border-gray-400 dark:border-gray-700 text-neutral-300 font-semibold focus:border-red-900 focus:outline-none"></textarea>
                     </div>
 
-                    <button type="submit" class="md:w-32 bg-black hover:bg-gray-900 text-white font-bold py-3 px-6 rounded-lg mt-3 hover:bg-indigo-500 transition ease-in-out duration-300">
+                    <button type="submit" class="md:w-32 bg-zinc-800 hover:bg-gray-900 text-white font-bold py-3 px-6 rounded-lg mt-3 hover:bg-red-950 transition ease-in-out duration-300">
                         Submit
                     </button>
-                      <p class="leading-relaxed text-xl text-gray-900 mt-8">
-                We use VeilMail.io to <a class="font-medium text-blue-600 dark:text-blue-500 hover:underline" href="https://veilmail.io">hide email address from spammers</a>
-            </p>
+                  
                 </form>
             </div>
         </div>
