finished about component (education and experience)

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,41 @@
-<p>about works!</p>
+
+<div class="text-center mb-12 mt-16">
+
+    <h2 class="text-2xl font-bold text-gray-900 mb-4">My Resume</h2>
+    <h4 class="text-sm text-sky-800 font-medium uppercase tracking-wider">Education & Experience</h4>
+    <p class="text-gray-600 text-lg">A summary of my education and professional journey so far.</p>
+</div>
+<div class="timeline">
+    <div class="container left">
+        <div class="bg-white p-8 border border-gray-200 rounded-lg shadow-xl hover:shadow-2xl transition-shadow duration-300">
+            <h3 class="text-xl font-semibold text-sky-700">Full Stack Developer</h3>
+            <span class="text-sm text-gray-500">ENAA | Morocco</span>
+            <div class="bg-sky-700 text-white inline-block px-3 py-1 rounded-full text-xs mt-2 mb-4">2024 - 2025</div>
+            <p class="text-gray-700 text-base leading-relaxed">Currently, I am working on strengthening my skills in both back-end and front-end development through a Full Stack Developer training program, specializing in Java EE, Angular, and Spring Boot.</p>
+        </div>
+    </div>
+    <div class="container right">
+        <div class="bg-white p-8 border border-gray-200 rounded-lg shadow-xl hover:shadow-2xl transition-shadow duration-300">
+            <h3 class="text-xl font-semibold text-sky-700">Internship</h3>
+            <span class="text-sm text-gray-500">Serenity Data Digital | Morocco</span>
+            <div class="bg-sky-700 text-white inline-block px-3 py-1 rounded-full text-xs mt-2 mb-4">2 months</div>
+            <p class="text-gray-700 text-base leading-relaxed">During my internship at Serenity Data Digital, I worked on developing a fully functional e-commerce website using modern web technologies, enhancing both front-end and back-end development skills.</p>
+        </div>
+    </div>
+    <div class="container left">
+        <div class="bg-white p-8 border border-gray-200 rounded-lg shadow-xl hover:shadow-2xl transition-shadow duration-300">
+            <h3 class="text-xl font-semibold text-sky-700">Bachelor Degree</h3>
+            <span class="text-sm text-gray-500">FST Cadi Ayyad University | Morocco</span>
+            <div class="bg-sky-700 text-white inline-block px-3 py-1 rounded-full text-xs mt-2 mb-4">2020 - 2023</div>
+            <p class="text-gray-700 text-base leading-relaxed">I earned my Bachelor's degree in Distributed Information Systems, which gave me a deep understanding of how information systems are developed and distributed in modern business environments.</p>
+        </div>
+    </div>
+    <div class="container right">
+        <div class="bg-white p-8 border border-gray-200 rounded-lg shadow-xl hover:shadow-2xl transition-shadow duration-300">
+            <h3 class="text-xl font-semibold text-sky-700">Baccalaureate Degree</h3>
+            <span class="text-sm text-gray-500">July 30th High School | Morocco</span>
+            <div class="bg-sky-700 text-white inline-block px-3 py-1 rounded-full text-xs mt-2 mb-4">2018 - 2019</div>
+            <p class="text-gray-700 text-base leading-relaxed">I obtained my Baccalaureate in Physical Sciences, which laid the foundation for my passion for problem-solving and analytical thinking in the field of technology.</p>
+        </div>
+    </div>   
+  </div>
