--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-navbar></app-navbar>
 <app-home></app-home>
+
 <app-about></app-about>
+<app-skils></app-skils>
 <app-contact></app-contact>
 <app-footer></app-footer>
