--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
 
 <app-about></app-about>
 <app-skils></app-skils>
+<app-projects></app-projects>
 <app-contact></app-contact>
 <app-footer></app-footer>
