--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 
-<footer data-testid="footer" class="p-6 text-center text-sm text-black dark:text-black">
+<footer data-testid="footer" class="p-6 text-center text-2xl text-black dark:text-black shadow-md  shadow-red-950 mt-16">
 	<p>
 		Copyright ©. All rights reserved. Made by <a
 			href="https://github.com/hajar-tech/myPortfolio"
