--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 
 <Section name='biography' class="p-6 mb-3 block xl:hidden" >
     <div>
-        <img src="images/avatar.png" alt="my photo" class="w-32 h-32 rounded-full mx-auto" />
+        <img src="images/developpeuse.avif" alt="my photo" class="w-50 h-50 rounded-full mx-auto" />
         <h1 class="text-black text-sm font-bold text-center">full stack developer</h1>
     </div>
     <div class="w-full items-center">
