--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -36,23 +36,23 @@
                     </div>
                 </div>
 
-                <form action="https://fabform.io/f/xxxxx" method="post" class="p-6 flex flex-col justify-center">
+                <form  [formGroup]="cotactForm" action="https://fabform.io/f/xxxxx" method="post" class="p-6 flex flex-col justify-center">
                     <div class="flex flex-col">
                         <label for="name" class="hidden">Full Name</label>
-                        <input type="name" name="name" id="name" placeholder="Full Name" class="w-100 mt-2 py-3 px-3 rounded-lg bg-transparent  border border-gray-400 dark:border-gray-700 text-neutral-300 font-semibold focus:border-red-900 focus:outline-none">
+                        <input type="name" formControlName="name"  name="name" id="name" placeholder="Full Name" class="w-100 mt-2 py-3 px-3 rounded-lg bg-transparent  border border-gray-400 dark:border-gray-700 text-neutral-300 font-semibold focus:border-red-900 focus:outline-none">
                     </div>
 
                     <div class="flex flex-col mt-2">
                         <label for="email" class="hidden">Email</label>
-                        <input type="email" name="email" id="email" placeholder="Email" class="w-100 mt-2 py-3 px-3 rounded-lg bg-transparent border border-gray-400 dark:border-gray-700 text-neutral-300 font-semibold focus:border-red-900 focus:outline-none">
+                        <input type="email" formControlName="email" name="email" id="email" placeholder="Email" class="w-100 mt-2 py-3 px-3 rounded-lg bg-transparent border border-gray-400 dark:border-gray-700 text-neutral-300 font-semibold focus:border-red-900 focus:outline-none">
                     </div>
 
                     <div class="flex flex-col mt-2">
                         <label for="message" class="hidden">Message</label>
-                        <textarea name="message" id="message" placeholder="Your Message" class="w-100 mt-2 py-3 px-3 rounded-lg bg-transparent border border-gray-400 dark:border-gray-700 text-neutral-300 font-semibold focus:border-red-900 focus:outline-none"></textarea>
+                        <textarea  name="message" formControlName="message" id="message" placeholder="Your Message" class="w-100 mt-2 py-3 px-3 rounded-lg bg-transparent border border-gray-400 dark:border-gray-700 text-neutral-300 font-semibold focus:border-red-900 focus:outline-none"></textarea>
                     </div>
 
-                    <button type="submit" class="md:w-32 bg-zinc-800 hover:bg-gray-900 text-white font-bold py-3 px-6 rounded-lg mt-3 hover:bg-red-950 transition ease-in-out duration-300">
+                    <button type="submit" class="md:w-32 bg-gray-800 hover:bg-sky-800 text-white font-bold py-3 px-6 rounded-lg mt-3  transition ease-in-out duration-300">
                         Submit
                     </button>
                   
