--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -3,6 +3,7 @@
     text-decoration: none; /* Retirer la sous-ligne */
     padding: 10px 15px;
     transition: color 0.3s ease; /* Transition douce */
+    cursor: pointer;
   }
   
   /* Effet hover */
