--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -27,11 +27,18 @@
     </div>
     <nav>
         <ul class="nav-list flex justify-center gap-10  mt-6 bg-black text-white p-3 rounded-lg">
-            <li class="nav-link"><a routerLink="/">Home</a></li>
+            <li class="nav-link"><a routerLink="/portfolio">Home</a></li>
             <li class="nav-link"><a routerLink="/about">About</a></li>
             <li class="nav-link"><a routerLink="/skils">Skils</a></li>
             <li class="nav-link"><a routerLink="/projects">Projects</a></li>
             <li class="nav-link"><a routerLink="/contact">Contact</a></li>
         </ul>
     </nav>
+    <router-outlet></router-outlet>
+
 </header>
+
+
+
+
+
