--- a/src/app/skils/skils.component.css
+++ b/src/app/skils/skils.component.css
@@ -19,9 +19,10 @@
   }
   .title {
     font-weight: 700;
-    font-size: 1.3em;
-    margin-left: 20px;
-   
+  font-size: 1.3em;
+  text-align: center;
+  margin: 40px 0 0 0;
+    
   }
   
   .tag__name {
