--- a/src/app/skils/skils.component.html
+++ b/src/app/skils/skils.component.html
@@ -1,6 +1,11 @@
 <!-- From Uiverse.io by admin8756 --> 
+<div>
+    <h1 class="text-3xl font-bold text-center mt-10">My Skills</h1>
+
+</div>
+
 <div class="card">
-    <span class="title">My Skills</span>
+   <!--<div class="title">My Skills</div>--> 
     <div class="card__tags">
       <ul class="tag">
         
